<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/txtTitle"
        android:textSize="24sp"
        app:fontFamily="serif" />

    <EditText
        android:id="@+id/txtTruck"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/hint1"
        android:inputType="number"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtDays"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118dp"
        android:ems="10"
        android:hint="@string/hint2"
        android:inputType="number"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtMiles"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:hint="@string/hint3"
        android:inputType="numberDecimal"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="229dp"
        android:text="@string/btnPayment"
        android:textSize="35sp" />

    <ImageView
        android:id="@+id/imgOpening"
        android:layout_width="match_parent"
        android:layout_height="268dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/imgDescription"
        android:src="@drawable/opening" />
</RelativeLayout>